connected to sql server

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,8 @@
-body{
-    /*background-color: aqua; */
-}
+@font-face {
+    font-family: "Yekan";
+    src: url("../font/Yekan.ttf")
+  }
+
 .hidden-class{
    display:none;
 }
